# ROV2026

./: .gitignore  README.md  flake.nix  pyproject.toml  test.py
calibration/: calibration.py  calibration_result.json  calibration_result.npz  generate_charuco_board.py  take.py  test
interface/gamepad/: elements.css  gamepad.js  index.html
piconfig/: instructions.txt  setupeverything.sh  startrovcode.service
pio/: main.cpp  platformio.ini
pio/src/: main.ino
scripts/: camera.py
src/: controller.py  dashboard.html  main.py  thruster.py  thruster_controller.py
src/certs/: cert.pem  key.pem
src/config/: xbox.json
src/frontend/: index.html  main.js  package-lock.json  package.json  vite.config.js
src/gamepad/: index.html  style.css
src/static/: CREDITS.md  camera_reload.js  gamepad.js  interaction.js  stream_monitor.js  style.css
src/templates/: camera.html  dashboard.html  index.html  operator.html
src/vision/: bottom_camera.py  camera.py  camera_main.py  crab_ncnn_model
src/vision/crab_new/: metadata.yaml  model_ncnn.py
