[project]
name = "ROV2026"
version = "0.1.0"
description = "TTROV 2026 ROV Code"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "flask-socketio>=5.6.1",
    "ncnn>=1.0.20260526",
    "opencv-python>=4.13.0.92",
    "platformio>=6.1.19",
    "pyserial>=3.5",
    "serialio>=2.4.0",
    "ultralytics>=8.4.76",
]
